<resources>
    <string name="app_name">ArduinoBluetooth</string>

    <string name="connection">Connection</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="bt_settings">Bluetooth Settings</string>
    <string name="loc_settings">Location Settings</string>
    <string name="rescan">Rescan</string>
    <string name="select_bt">Select Bluetooth LE Connection:</string>
    <string name="connection_info">Connection Information:</string>
    <string name="name">Name: </string>
    <string name="address">Address: </string>
    <string name="char_info">Characteristic Information: </string>
    <string name="char_uuid">Charactieristic UUID: </string>
    <string name="service_uuid">Service UUID: </string>

    <string name="settings">Config</string>
    <string name="configure">Configure</string>
    <string name="select_config">Select currentConfig:</string>
    <string name="new_profile">New Profile…</string>
    <string name="new_prof">New profile</string>
    <string name="save">Save</string>
    <string name="prompt_name">Enter a name for new profile:</string>
    <string name="prompt_name_title">Save profile</string>
    <string name="delete">Delete</string>
    <string name="reset_seekbar">Reset Seekbar to 0 when not touched</string>

    <string name="controls">Controls</string>
    <string name="clear_console">Clear Console</string>
    <string name="input_hint">Enter command here</string>
    <string name="send">Send</string>
    <string name="left_arrow">◀</string>
    <string name="right_arrow">▶</string>
    <string name="up_arrow">▲</string>
    <string name="down_arrow">▼</string>
    <string name="center_icon">⬤</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="seek_instruc">Use %v to represent the seekbar value</string>
    <string name="value_rep">%v</string>
    <string name="left_seek">Left Seek: </string>
    <string name="right_seek">Right Seek: </string>

    <string name="please_enable_lc">Please enable location services</string>
    <string name="already_scanning">Already scanning!</string>
    <string name="already_connected">Already connected!</string>
    <string name="scanning_bt">Scanning Bluetooth devices…</string>
    <string name="finished_scanning">Finished scanning</string>
    <string name="connecting">Connecting…</string>
    <string name="connected">Connected and ready to go</string>
    <string name="not_connected">Not connected!</string>
    <string name="no_bluetooth">Error: Bluetooth and/or location services is unsupported or is disabled.</string>

    <string name="info">Info</string>
    <string name="info_all">

ArduinoBluetooth v1.0 | Written by Andy Nguyen (2017)\n
Scroll down to bottom for legal stuff\n\n

---------------------\n\n

This app can connect and send messages to a Bluetooth Low Energy device, specifically the Arduino 101. \n\n

---------------------\n\n

Guide:\n
1. Go to the CONNECTION tab. Turn on Bluetooth and Location Services (both needed).\n
2. Hit "SCAN" to scan for nearby devices. Scanning takes 10 seconds but can be cut short with:\n
3. Find the device you want to select to and hit "CONNECT". Connection time varies.\n
4. Go to the "CONFIG" tab. Configure buttons to your liking. The command is the exact message that will be sent to the BT device, and it will automatically be converted to int, float, or String. The dropdown is the characteristic and service to connect to, which are set on the BT device. "C ####" is the 16-bit UUID of the characteristic, and "S ####" is the 16-bit UUID of the service.\n
5. Go to the "CONTROLS" tab and have fun.\n\n

---------------------\n\n

Copyright 2017 SHS Robotics.\n\n

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\n

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\n

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    </string>

</resources>
