<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_bluetooth_settings"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onConnectionsClick"
                    android:text="@string/bt_settings"/>


                <Button
                    android:id="@+id/btn_location_settings"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onConnectionsClick"
                    android:text="@string/loc_settings"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:background="#666" />


            <TextView
                android:text="@string/select_bt"
                android:layout_width="match_parent"
                android:textAppearance="@style/Size16"
                android:layout_height="wrap_content" />


            <Spinner
                android:id="@+id/bluetooth_connections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_rescan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/rescan"
                    android:onClick="onConnectionsClick"/>

                <Button
                    android:id="@+id/btn_bluetooth_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:onClick="onConnectionsClick"
                    android:text="@string/connect" />

                <Button
                    android:id="@+id/btn_disconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:onClick="onConnectionsClick"
                    android:text="@string/disconnect" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:background="#666" />


            <TextView
                android:textAppearance="@style/Size18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/connection_info" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:textAppearance="@style/Size18"
                        android:text="@string/name"
                        android:gravity="right"/>
                    <TextView
                        android:id="@+id/txt_bt_name"
                        android:textAppearance="@style/Size14"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:textAppearance="@style/Size18"
                        android:gravity="right"
                        android:text="@string/address"/>
                    <TextView
                        android:id="@+id/txt_bt_address"
                        android:textAppearance="@style/Size14"
                        android:layout_weight="1"/>
                </TableRow>


            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dip" />


            <TextView
                android:textAppearance="@style/Size18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/char_info" />


            <Spinner
                android:id="@+id/spinner_characteristics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:textAppearance="@style/Size14"
                        android:text="@string/char_uuid"
                        android:gravity="right"/>
                    <TextView
                        android:id="@+id/txt_char_uuid"
                        android:textAppearance="@style/Size14"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:padding="5dp"
                        android:textAppearance="@style/Size14"
                        android:gravity="right"
                        android:text="@string/service_uuid"/>
                    <TextView
                        android:id="@+id/txt_service_uuid"
                        android:textAppearance="@style/Size14"
                        android:layout_weight="1"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>